--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -66,6 +66,7 @@ main.class=\u0131magecompression.JPEG_Editor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
